fixed header with right colors. spacing to be improved

--- a/css/header-styling.css
+++ b/css/header-styling.css
@@ -39,8 +39,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    margin-top:2rem;
-    margin: 0;
+    margin: .8rem;
 }
 
 .search-box:hover > .txt {
