--- a/css/styling.css
+++ b/css/styling.css
@@ -14,13 +14,16 @@ main {
 
 
 }
-
-.header-row{
-    width: 100%;
+.transparent {
     background-color: rgba(229,229,229, 0.7);
     color: #477A7C
 }
-.container {
+
+.header-row{
+    width: 100%;
+
+}
+.fcontainer {
     width: 100%;
     flex-direction: row; 
     display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
@@ -108,17 +111,32 @@ header {
     margin-bottom: 0;
 
 }
-/* .nav-item a{
+.nav-item{
     display: flex;
     text-decoration: none;
     color: #477A7C;
     margin: .8rem;
     font-size: 16px;
-}
+} 
+ .nav-link {
+    display: flex;
+    text-decoration: none;
+    color: #477A7C;
+    margin: .8rem;
+    font-size: 16px;
+} 
+.nav-link strong{
+    display: flex;
+    text-decoration: none;
+    color: #477A7C;
+    margin: .8rem;
+    font-size: 16px;
+} 
 
-.nav-item a:hover{
+
+.nav-link a:hover{
     text-decoration: underline;
-} */
+}
 .hero-header-container{
    display: flex;
    color: #477A7C;
@@ -183,11 +201,3 @@ header {
     margin-bottom: 3rem;
 
   }
-.search {
-    margin-left: auto;
-    font-size: 14px;
-    display: flex;
-    margin-right: 3rem;
-    margin-top: 1rem;
-
-}
